# noaa-cli

./: .env.sample  Cargo.toml  README.md
src/: api.rs  args.rs  events.rs  geocode.rs  google.rs  main.rs  noaa.rs  state.rs  ui.rs
src/ui/: events.rs  helpers.rs  mod.rs  render.rs
